--- a/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
+++ b/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Intalnire1.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Pregatire1.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
