--- a/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
+++ b/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
@@ -24,10 +24,8 @@
     <ClCompile Include="Pregatire2.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Pregatire2.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClCompile Include="Pregatire3.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
