--- a/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
+++ b/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Pregatire3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Pregatire4.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
