--- a/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj
+++ b/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Pregatire1.c" />
     <ClCompile Include="Pregatire2.c" />
     <ClCompile Include="Pregatire3.c" />
+    <ClCompile Include="Pregatire4.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
