--- a/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
+++ b/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="Pregatire4.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Task_suplimentar_1.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
