--- a/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj
+++ b/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Pregatire3.c" />
     <ClCompile Include="Pregatire4.c" />
     <ClCompile Include="Task_suplimentar_1.c" />
+    <ClCompile Include="Vector.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
