--- a/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj
+++ b/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="exercitiu.c" />
+    <ClCompile Include="heap.c" />
     <ClCompile Include="Intalnire1.c" />
     <ClCompile Include="Pregatire1.c" />
     <ClCompile Include="Pregatire2.c" />
