--- a/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
+++ b/Samedin_Aime_ActivitateSD2025/Samedin_Aime_ActivitateSD2025.vcxproj.filters
@@ -42,5 +42,11 @@
     <ClCompile Include="heap.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HeapEx.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ABC.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
